--- a/project.config.json
+++ b/project.config.json
@@ -4,30 +4,14 @@
 		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
-		"minified": true
+		"minified": true,
+		"newFeature": true
 	},
-	"compileType": "weapp",
+	"compileType": "miniprogram",
 	"libVersion": "1.6.0",
 	"appid": "wxf57430d3453d3cb0",
 	"projectname": "pinbaihuiDemo",
 	"condition": {
-		"weapp": {
-			"current": 0,
-			"list": [
-				{
-					"id": -1,
-					"name": "我的信息",
-					"pathName": "pages/myInfo/myInfo",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "我的信息",
-					"pathName": "pages/signIn/signIn",
-					"query": ""
-				}
-			]
-		},
 		"search": {
 			"current": -1,
 			"list": []
@@ -35,6 +19,17 @@
 		"conversation": {
 			"current": -1,
 			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": -1,
+					"name": "我的信息",
+					"pathName": "pages/myInfo/myInfo",
+					"query": ""
+				}
+			]
 		}
 	}
 }
