完成了每日推的路由跳转，以及数据的渲染，里面的具体功能还有待优化

--- a/app.json
+++ b/app.json
@@ -5,7 +5,9 @@
     "pages/design/design",
     "pages/myInfo/myInfo",
     "pages/signIn/signIn",
-    "pages/setPassword/setPassword"
+    "pages/setPassword/setPassword",
+    "pages/everyday/everyday",
+    "pages/huishenghuo/huishenghuo"
   ],
   "window":{
     "navigationBarBackgroundColor": "#e32615",
