设计圈的朋友列表的样式以及 在请求头header中带入token

--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -39,6 +39,12 @@
 					"id": -1,
 					"name": "惠生活",
 					"pathName": "pages/huishenghuo/huishenghuo",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "设计圈",
+					"pathName": "pages/design/design",
 					"query": ""
 				}
 			]
